# bazaaro

./: CLAUDE.md  Cargo.toml  README.md
src/: characters.rs  fighting.rs  items.rs  loading.rs  main.rs
src/effects/: attack.rs  burn.rs  freeze.rs  haste.rs  heal.rs  mod.rs  poison.rs  regen.rs  shield.rs  slow.rs
src/items/: armory.rs  burner.rs  freezer.rs  hastener.rs  healer.rs  mod.rs  poisoner.rs  shielder.rs  slower.rs  targeting.rs  usable.rs  usable_with_targeted_effect.rs  weapons.rs
