[package]
name = "bazaaro"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    "bevy_dev_tools",
    "bevy_state",
    "dynamic_linking",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
